# statum

./: README.md  pyproject.toml
examples/CreatePRD/: main.py
examples/CreatePRD/actions/: ApprovePRD.py  CreatePRD.py  EditPRD.py  ReviewPRD.py
examples/CreatePRD/agents/: ProductManager.py
statum/LLMs/: LLM.py  openai_function.py
statum/actions/: actions.py  openai_action.py  plan.txt
statum/agents/: agent.py  machine.py
statum/memory/: history.py  memory.py
statum/types/: __init__.py  types.py
