[project]
name = "statum"
version = "0.1.0"
description = "Opionated Framework to build scalable LLM based applications through function chaining or state machines."
authors = ["Liam Croteau <liamcroteau@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "statum"}]
repository = "https://github.com/liamlio/statum"

[tool.poetry.dependencies]
python = "^3.10.12"
openai = "^0.27.8"
pydantic = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
